# Patsers-Mommy

./: .gitignore  README.md  cogTemplate.txt  defaults.py  functions.py  helpEmbeds.py  main.py  pyproject.toml
cogs/: config.py  database.py  dogelore.py  emoji.py  fun.py  help.py  info.py  misc.py  moderation.py  music.py  nsfw.py  roles.py  starWarsAPI.py  xp.py
site/html/: dashboard.html  home.html  invalidDashboard.html  profile.html  stats.html
site/static/: style.css
